--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="content" type="overlay">
   <ion-header>
-    <ion-toolbar>
+    <ion-toolbar color="primary">
       <ion-title>Ristorante Con Fusion</ion-title>
     </ion-toolbar>
   </ion-header>
